# agentreel

./: .gitignore  Cargo.toml  LICENSE  README.md  demo.tape  install.sh
.github/workflows/: ci.yml  release.yml
crates/agentreel-cli/: Cargo.toml
crates/agentreel-cli/src/: main.rs
crates/agentreel-cli/src/commands/: compare.rs  diff.rs  fork.rs  list.rs  mod.rs  record.rs  redact.rs  stats.rs  validate.rs  view.rs
crates/agentreel-core/: Cargo.toml
crates/agentreel-core/src/: config.rs  diff.rs  lib.rs  redact.rs  trajectory.rs
crates/agentreel-proxy/: Cargo.toml
crates/agentreel-proxy/src/: costs.rs  lib.rs  proxy.rs  recorder.rs
examples/: 01_chat_agent.py  02_tool_agent.py  03_sdk_agent.py  04_compare_models.py  README.md
sdks/python/: pyproject.toml
sdks/python/agentreel/: __init__.py  costs.py  recorder.py  redact.py  tracer.py  trajectory.py
sdks/python/agentreel/adapters/: __init__.py  base.py  crewai.py  langchain.py  openai_agents.py
sdks/python/tests/: test_trajectory.py
sdks/typescript/: package-lock.json  package.json
sdks/typescript/src/: index.ts  recorder.ts  redact.ts  tracer.ts  trajectory.ts  types.ts
sdks/typescript/src/test/: trajectory.test.ts
spec/: trajectory.schema.json
web/: package-lock.json  package.json  tailwind.config.js
web/public/: example.trajectory.json
web/src/app/: layout.tsx  page.tsx
web/src/app/compare/: page.tsx
web/src/app/upload/: page.tsx
web/src/components/: CostWaterfall.tsx  ExportButton.tsx  JsonTree.tsx  Markdown.tsx  ReplayDebugger.tsx  SearchBar.tsx  SmartAnalysis.tsx  StepTimeline.tsx  TrajectoryHeader.tsx  TrajectoryViewer.tsx  UploadZone.tsx  VisualTimeline.tsx
web/src/lib/: parse.ts  types.ts
