[package]
name = "agentreel-cli"
description = "CLI for AgentReel — record, replay, and share AI agent runs"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agentreel"
path = "src/main.rs"

[dependencies]
agentreel-core = { path = "../agentreel-core" }
agentreel-proxy = { path = "../agentreel-proxy" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
dirs.workspace = true
