[package]
name = "agentreel-core"
description = "Core types and trajectory format for AgentReel"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
regex = "1"
toml.workspace = true
dirs.workspace = true
