[package]
name = "agentreel-proxy"
description = "LLM API proxy for AgentReel — intercepts and records agent-to-LLM traffic"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agentreel-core = { path = "../agentreel-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
reqwest.workspace = true
bytes.workspace = true
futures.workspace = true
tokio-stream.workspace = true
uuid.workspace = true
chrono.workspace = true
