[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentreel"
version = "0.1.0"
description = "Python SDK for AgentReel — record, replay, and share AI agent runs"
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/deep/agentreel"
